--- a/Pandas_zadania_7_12.ipynb
+++ b/Pandas_zadania_7_12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b09cacef",
+   "id": "4012766d",
    "metadata": {},
    "source": [
     "### Zadanie 7 - Data Scientists\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "67eeca24",
+   "id": "5b47154c",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "2ac116bb",
+   "id": "717ab14f",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f407bbbd",
+   "id": "d42e1053",
    "metadata": {},
    "source": [
     "##### inne zapisy - bym pamiętała"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "24ce7467",
+   "id": "f038bc14",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "742b7450",
+   "id": "ea0903c8",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02ae5c81",
+   "id": "38a754bb",
    "metadata": {},
    "source": [
     "###  Zadanie 8 - Nazwy departamentów\n",
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "e0b26b9a",
+   "id": "5b606b34",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,194 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb3209b",
+   "id": "7a2add85",
+   "metadata": {},
+   "source": [
+    "#### metoda .replace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "32df244b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imię</th>\n",
+       "      <th>nazwisko</th>\n",
+       "      <th>płeć</th>\n",
+       "      <th>rok urodzenia</th>\n",
+       "      <th>miesiac urodzenia</th>\n",
+       "      <th>dzień urodzenia</th>\n",
+       "      <th>miejsce urodzenia</th>\n",
+       "      <th>miasto, w którym znajduje się oddział firmy</th>\n",
+       "      <th>departament, w którym pracuje dana osoba</th>\n",
+       "      <th>rok rozpoczęcia pracy w firmie</th>\n",
+       "      <th>miesiac rozpoczęcia pracy</th>\n",
+       "      <th>dzień rozpoczęcia pracy</th>\n",
+       "      <th>doswiadczenie (w latach)</th>\n",
+       "      <th>poziom</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Barbara</td>\n",
+       "      <td>Babacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Gdynia</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Data Analytics</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Senior</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Celina</td>\n",
+       "      <td>Cabacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Sopot</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Software Development Team</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Ekspert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dariusz</td>\n",
+       "      <td>Dabacki</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Lublin</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Human Resources</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Mid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ewelina</td>\n",
+       "      <td>Ebacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1968</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Warszawa</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Accounting</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>15</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Ekspert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ferdynand</td>\n",
+       "      <td>Fabacki</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>11</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Walbrzych</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Human Resources</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>25</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Ekspert</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        imię nazwisko płeć  rok urodzenia  miesiac urodzenia  dzień urodzenia  \\\n",
+       "0    Barbara  Babacka    K           1971                  4                5   \n",
+       "1     Celina  Cabacka    K           1969                  6                7   \n",
+       "2    Dariusz  Dabacki    M           1972                  8                9   \n",
+       "3    Ewelina   Ebacka    K           1968                 10               11   \n",
+       "4  Ferdynand  Fabacki    M           1973                 11               12   \n",
+       "\n",
+       "  miejsce urodzenia miasto, w którym znajduje się oddział firmy  \\\n",
+       "0            Gdynia                                      Gdansk   \n",
+       "1             Sopot                                      Gdansk   \n",
+       "2            Lublin                                      Gdansk   \n",
+       "3          Warszawa                                      Gdansk   \n",
+       "4         Walbrzych                                      Gdansk   \n",
+       "\n",
+       "  departament, w którym pracuje dana osoba  rok rozpoczęcia pracy w firmie  \\\n",
+       "0                           Data Analytics                          2008.0   \n",
+       "1                Software Development Team                          2013.0   \n",
+       "2                          Human Resources                          2020.0   \n",
+       "3                               Accounting                          2000.0   \n",
+       "4                          Human Resources                          2001.0   \n",
+       "\n",
+       "   miesiac rozpoczęcia pracy  dzień rozpoczęcia pracy  \\\n",
+       "0                          5                       15   \n",
+       "1                          6                       25   \n",
+       "2                          4                        5   \n",
+       "3                          7                       15   \n",
+       "4                          8                       25   \n",
+       "\n",
+       "   doswiadczenie (w latach)   poziom  \n",
+       "0                        10   Senior  \n",
+       "1                        35  Ekspert  \n",
+       "2                         4      Mid  \n",
+       "3                        30  Ekspert  \n",
+       "4                        20  Ekspert  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.replace({'Software Development': 'Software Development Team', 'HR':'Human Resources', 'Data Science': 'Data Analytics'}).head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20a83159",
    "metadata": {},
    "source": [
     "### Pandas - Zadanie 9 - Seniorzy\n",
@@ -439,8 +626,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "9447e945",
+   "execution_count": 100,
+   "id": "d3ece159",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +636,7 @@
        "('Krakow', 7)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,8 +648,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "id": "f0a7a2ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Krakow'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data == data.max()]\n",
+    "data.idxmax()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ead5c11",
+   "metadata": {},
+   "source": [
+    "### Pandas - Zadanie 10 - Kobiety Juniorzy\n",
+    "\n",
+    "##### Które biuro ma najwięcej kobiet na Juniorskim poziomie doświadczenia ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "8dd2771a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], Name: nazwisko, dtype: int64)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = dataset[dataset.poziom == 'Junior'].groupby(['miasto, w którym znajduje się oddział firmy','płeć']).count().nazwisko\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "70350666",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imię</th>\n",
+       "      <th>nazwisko</th>\n",
+       "      <th>płeć</th>\n",
+       "      <th>rok urodzenia</th>\n",
+       "      <th>miesiac urodzenia</th>\n",
+       "      <th>dzień urodzenia</th>\n",
+       "      <th>miejsce urodzenia</th>\n",
+       "      <th>miasto, w którym znajduje się oddział firmy</th>\n",
+       "      <th>departament, w którym pracuje dana osoba</th>\n",
+       "      <th>rok rozpoczęcia pracy w firmie</th>\n",
+       "      <th>miesiac rozpoczęcia pracy</th>\n",
+       "      <th>dzień rozpoczęcia pracy</th>\n",
+       "      <th>doswiadczenie (w latach)</th>\n",
+       "      <th>poziom</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [imię, nazwisko, płeć, rok urodzenia, miesiac urodzenia, dzień urodzenia, miejsce urodzenia, miasto, w którym znajduje się oddział firmy, departament, w którym pracuje dana osoba, rok rozpoczęcia pracy w firmie, miesiac rozpoczęcia pracy, dzień rozpoczęcia pracy, doswiadczenie (w latach), poziom]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[dataset.poziom == 'Junior'] # w ogóle nie ma juniorów w bazie"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4e2849b5",
+   "id": "43cf5874",
    "metadata": {},
    "outputs": [],
    "source": []
