Dodane zad nr 11

--- a/Pandas_zadania_7_12.ipynb
+++ b/Pandas_zadania_7_12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4012766d",
+   "id": "c9e5c064",
    "metadata": {},
    "source": [
     "### Zadanie 7 - Data Scientists\n",
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5b47154c",
+   "execution_count": 2,
+   "id": "9931aa7a",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "2                         4      Mid  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "717ab14f",
+   "id": "b2fe7398",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d42e1053",
+   "id": "21a36908",
    "metadata": {},
    "source": [
     "##### inne zapisy - bym pamiętała"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "f038bc14",
+   "id": "2e3d02ac",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "ea0903c8",
+   "id": "e0e61820",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38a754bb",
+   "id": "4a0df4ff",
    "metadata": {},
    "source": [
     "###  Zadanie 8 - Nazwy departamentów\n",
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "5b606b34",
+   "id": "cc84c57e",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a2add85",
+   "id": "7007ec0d",
    "metadata": {},
    "source": [
     "#### metoda .replace()"
@@ -437,8 +437,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "32df244b",
+   "execution_count": 3,
+   "id": "b8a8fb01",
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "4                        20  Ekspert  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20a83159",
+   "id": "6fc4287b",
    "metadata": {},
    "source": [
     "### Pandas - Zadanie 9 - Seniorzy\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "d3ece159",
+   "id": "30658450",
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "f0a7a2ff",
+   "id": "9bbe5d33",
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ead5c11",
+   "id": "90f5a245",
    "metadata": {},
    "source": [
     "### Pandas - Zadanie 10 - Kobiety Juniorzy\n",
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "8dd2771a",
+   "execution_count": 123,
+   "id": "cc1e112c",
    "metadata": {},
    "outputs": [
     {
@@ -690,20 +690,20 @@
        "Series([], Name: nazwisko, dtype: int64)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = dataset[dataset.poziom == 'Junior'].groupby(['miasto, w którym znajduje się oddział firmy','płeć']).count().nazwisko\n",
+    "data = dataset[dataset[(dataset.poziom == 'Junior') & (dataset.płeć == 'K')]].groupby(['miasto, w którym znajduje się oddział firmy','płeć']).count().nazwisko\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "70350666",
+   "id": "1662d1b0",
    "metadata": {},
    "outputs": [
     {
@@ -764,9 +764,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba93b9ce",
+   "metadata": {},
+   "source": [
+    "###  Zadanie 11 - Kobiety Mid\n",
+    "\n",
+    "##### Ile jest kobiet w krakowskim biurze, na Mid poziomie doświadczenia, urodzonych przed 1975 rokiem ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "69bec526",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imię</th>\n",
+       "      <th>nazwisko</th>\n",
+       "      <th>płeć</th>\n",
+       "      <th>rok urodzenia</th>\n",
+       "      <th>miesiac urodzenia</th>\n",
+       "      <th>dzień urodzenia</th>\n",
+       "      <th>miejsce urodzenia</th>\n",
+       "      <th>miasto, w którym znajduje się oddział firmy</th>\n",
+       "      <th>departament, w którym pracuje dana osoba</th>\n",
+       "      <th>rok rozpoczęcia pracy w firmie</th>\n",
+       "      <th>miesiac rozpoczęcia pracy</th>\n",
+       "      <th>dzień rozpoczęcia pracy</th>\n",
+       "      <th>doswiadczenie (w latach)</th>\n",
+       "      <th>poziom</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [imię, nazwisko, płeć, rok urodzenia, miesiac urodzenia, dzień urodzenia, miejsce urodzenia, miasto, w którym znajduje się oddział firmy, departament, w którym pracuje dana osoba, rok rozpoczęcia pracy w firmie, miesiac rozpoczęcia pracy, dzień rozpoczęcia pracy, doswiadczenie (w latach), poziom]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = dataset[(dataset['miasto, w którym znajduje się oddział firmy'] == 'Krakow') \n",
+    "               &(dataset.poziom == 'Mid') & (dataset.płeć == 'K') & (dataset['rok urodzenia'] < 1975)]\n",
+    "data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43cf5874",
+   "id": "644699e6",
    "metadata": {},
    "outputs": [],
    "source": []
