Dodane zad nr 12

--- a/Pandas_zadania_7_12.ipynb
+++ b/Pandas_zadania_7_12.ipynb
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba93b9ce",
+   "id": "ef620bff",
    "metadata": {},
    "source": [
     "###  Zadanie 11 - Kobiety Mid\n",
@@ -776,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "69bec526",
+   "id": "8344d6df",
    "metadata": {},
    "outputs": [
     {
@@ -839,9 +839,133 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1dc7ce93",
+   "metadata": {},
+   "source": [
+    "### Pandas - Zadanie 12 - Seniorzy z ostatnich 10 lat\n",
+    "\n",
+    "##### Ile osób, które posiadają obecnie stanowisko seniorskie, dołączyło do firmy w przeciągu ostatnich 10 lat?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "434b2cb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imię</th>\n",
+       "      <th>nazwisko</th>\n",
+       "      <th>płeć</th>\n",
+       "      <th>rok urodzenia</th>\n",
+       "      <th>miesiac urodzenia</th>\n",
+       "      <th>dzień urodzenia</th>\n",
+       "      <th>miejsce urodzenia</th>\n",
+       "      <th>miasto, w którym znajduje się oddział firmy</th>\n",
+       "      <th>departament, w którym pracuje dana osoba</th>\n",
+       "      <th>rok rozpoczęcia pracy w firmie</th>\n",
+       "      <th>miesiac rozpoczęcia pracy</th>\n",
+       "      <th>dzień rozpoczęcia pracy</th>\n",
+       "      <th>doswiadczenie (w latach)</th>\n",
+       "      <th>poziom</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Antoni</td>\n",
+       "      <td>Abacki</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1982</td>\n",
+       "      <td>7</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Warszawa</td>\n",
+       "      <td>Krakow</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Senior</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Beata</td>\n",
+       "      <td>Babacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>8</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Krakow</td>\n",
+       "      <td>Krakow</td>\n",
+       "      <td>Software Development</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>24</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Senior</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      imię nazwisko płeć  rok urodzenia  miesiac urodzenia  dzień urodzenia  \\\n",
+       "22  Antoni   Abacki    M           1982                  7               20   \n",
+       "23   Beata  Babacka    K           1991                  8               19   \n",
+       "\n",
+       "   miejsce urodzenia miasto, w którym znajduje się oddział firmy  \\\n",
+       "22          Warszawa                                      Krakow   \n",
+       "23            Krakow                                      Krakow   \n",
+       "\n",
+       "   departament, w którym pracuje dana osoba  rok rozpoczęcia pracy w firmie  \\\n",
+       "22                                       HR                          2018.0   \n",
+       "23                     Software Development                          2019.0   \n",
+       "\n",
+       "    miesiac rozpoczęcia pracy  dzień rozpoczęcia pracy  \\\n",
+       "22                         10                       20   \n",
+       "23                          4                       24   \n",
+       "\n",
+       "    doswiadczenie (w latach)  poziom  \n",
+       "22                        12  Senior  \n",
+       "23                        11  Senior  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = dataset[(dataset.poziom == 'Senior') & (dataset['rok rozpoczęcia pracy w firmie'] >= 2012)]\n",
+    "data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "644699e6",
+   "id": "73974ae4",
    "metadata": {},
    "outputs": [],
    "source": []
